--- a/Supporting Files/Base.lproj/Main.storyboard
+++ b/Supporting Files/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
         <!--Lunch Tyme-->
         <scene sceneID="kNE-Yb-uwg">
             <objects>
-                <collectionViewController id="PR9-NS-Zxm" customClass="BRTCollectionViewController" sceneMemberID="viewController">
+                <collectionViewController id="PR9-NS-Zxm" customClass="BRTRestaurantViewController" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="tnr-0t-BJC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -72,6 +72,7 @@
                                     <outlet property="categoryLabel" destination="MjU-kj-SxY" id="hh0-5D-Ib4"/>
                                     <outlet property="restaurantImageView" destination="OaX-RT-gW5" id="Bwn-Jj-xFn"/>
                                     <outlet property="restaurantNameLabel" destination="mTd-1l-1FX" id="fLR-zS-5H1"/>
+                                    <segue destination="NUn-z0-kkv" kind="show" identifier="RestaurantSegue" id="Uc9-1c-hcX"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -89,6 +90,48 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bmb-HX-8Zr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1034.4000000000001" y="-334.18290854572717"/>
+        </scene>
+        <!--Restaurant Detail View Controller-->
+        <scene sceneID="6nw-I1-6I9">
+            <objects>
+                <viewController id="NUn-z0-kkv" customClass="BRTRestaurantDetailViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yL8-Uq-vDK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Restaurant Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qc9-cE-Ixk">
+                                <rect key="frame" x="16" y="247" width="138" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tUa-56-AfD">
+                                <rect key="frame" x="16" y="301" width="138" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="g09-sc-bvX">
+                                <rect key="frame" x="34" y="64" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yig-xS-Gf8">
+                                <rect key="frame" x="16" y="272" width="138" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="idx-Ay-dF3"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nCx-ZZ-yDR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2004" y="-334.18290854572717"/>
         </scene>
         <!--internets-->
         <scene sceneID="541-0g-U5d">
