--- a/Supporting Files/Base.lproj/Main.storyboard
+++ b/Supporting Files/Base.lproj/Main.storyboard
@@ -37,13 +37,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="180"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OaX-RT-gW5" customClass="B">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OaX-RT-gW5">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="180"/>
                                             <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="375" id="Z8l-bh-mif"/>
-                                                <constraint firstAttribute="height" constant="180" id="uo7-GZ-pTs"/>
-                                            </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Restaurant Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mTd-1l-1FX">
                                             <rect key="frame" x="7" y="123" width="254" height="22"/>
@@ -62,10 +58,10 @@
                                     </subviews>
                                 </view>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="OaX-RT-gW5" secondAttribute="trailing" id="Bi1-A5-zaN"/>
-                                    <constraint firstAttribute="bottom" secondItem="OaX-RT-gW5" secondAttribute="bottom" id="FDL-IG-QhE"/>
-                                    <constraint firstItem="OaX-RT-gW5" firstAttribute="leading" secondItem="K0i-kn-FxJ" secondAttribute="leading" id="k80-8x-byI"/>
-                                    <constraint firstItem="OaX-RT-gW5" firstAttribute="top" secondItem="K0i-kn-FxJ" secondAttribute="top" id="uTg-gK-Tpf"/>
+                                    <constraint firstAttribute="bottom" secondItem="OaX-RT-gW5" secondAttribute="bottom" id="74i-cH-T5w"/>
+                                    <constraint firstAttribute="trailing" secondItem="OaX-RT-gW5" secondAttribute="trailing" id="B2B-Wc-RVp"/>
+                                    <constraint firstItem="OaX-RT-gW5" firstAttribute="leading" secondItem="K0i-kn-FxJ" secondAttribute="leading" id="WoZ-QW-DJE"/>
+                                    <constraint firstItem="OaX-RT-gW5" firstAttribute="top" secondItem="K0i-kn-FxJ" secondAttribute="top" id="wf3-mx-nt3"/>
                                 </constraints>
                                 <size key="customSize" width="375" height="180"/>
                                 <connections>
@@ -113,10 +109,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="g09-sc-bvX">
-                                <rect key="frame" x="34" y="64" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </mapView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yig-xS-Gf8">
                                 <rect key="frame" x="16" y="272" width="138" height="24"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -128,6 +120,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="idx-Ay-dF3"/>
                     </view>
+                    <connections>
+                        <outlet property="categoryNameLabel" destination="Yig-xS-Gf8" id="hYn-y4-eH9"/>
+                        <outlet property="phoneNumberLabel" destination="tUa-56-AfD" id="RFj-BE-Vz6"/>
+                        <outlet property="restaurantNameLabel" destination="Qc9-cE-Ixk" id="D4g-b8-aNc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nCx-ZZ-yDR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -154,7 +151,7 @@
             <objects>
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="xDo-AX-KlV" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bQs-r2-cdQ" customClass="BRTTabBar">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bQs-r2-cdQ">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
