--- a/Supporting Files/Base.lproj/Main.storyboard
+++ b/Supporting Files/Base.lproj/Main.storyboard
@@ -6,12 +6,14 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <array key="AvenirNext.ttc">
             <string>AvenirNext-DemiBold</string>
+            <string>AvenirNext-Regular</string>
         </array>
     </customFonts>
     <scenes>
@@ -41,16 +43,17 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="180"/>
                                             <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Restaurant Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mTd-1l-1FX">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Restaurant Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mTd-1l-1FX">
                                             <rect key="frame" x="7" y="123" width="254" height="22"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="16"/>
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Category Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MjU-kj-SxY">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MjU-kj-SxY">
                                             <rect key="frame" x="8" y="148" width="274" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="1nq-8o-Ai1"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="16"/>
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -60,15 +63,21 @@
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="OaX-RT-gW5" secondAttribute="bottom" id="74i-cH-T5w"/>
                                     <constraint firstAttribute="trailing" secondItem="OaX-RT-gW5" secondAttribute="trailing" id="B2B-Wc-RVp"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="MjU-kj-SxY" secondAttribute="bottom" constant="3" id="CrI-3a-JTs"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="mTd-1l-1FX" secondAttribute="trailing" constant="106" id="Mis-e4-iet"/>
+                                    <constraint firstItem="MjU-kj-SxY" firstAttribute="leading" secondItem="K0i-kn-FxJ" secondAttribute="leadingMargin" id="WgB-hU-irp"/>
                                     <constraint firstItem="OaX-RT-gW5" firstAttribute="leading" secondItem="K0i-kn-FxJ" secondAttribute="leading" id="WoZ-QW-DJE"/>
+                                    <constraint firstItem="mTd-1l-1FX" firstAttribute="leading" secondItem="K0i-kn-FxJ" secondAttribute="leadingMargin" constant="-1" id="ZZt-E3-32W"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="MjU-kj-SxY" secondAttribute="trailing" constant="85" id="mu0-5r-Tjj"/>
                                     <constraint firstItem="OaX-RT-gW5" firstAttribute="top" secondItem="K0i-kn-FxJ" secondAttribute="top" id="wf3-mx-nt3"/>
+                                    <constraint firstItem="MjU-kj-SxY" firstAttribute="top" secondItem="mTd-1l-1FX" secondAttribute="bottom" constant="3" id="xKJ-Rg-eSR"/>
                                 </constraints>
                                 <size key="customSize" width="375" height="180"/>
                                 <connections>
                                     <outlet property="categoryLabel" destination="MjU-kj-SxY" id="hh0-5D-Ib4"/>
                                     <outlet property="restaurantImageView" destination="OaX-RT-gW5" id="Bwn-Jj-xFn"/>
                                     <outlet property="restaurantNameLabel" destination="mTd-1l-1FX" id="fLR-zS-5H1"/>
-                                    <segue destination="NUn-z0-kkv" kind="show" identifier="RestaurantSegue" id="Uc9-1c-hcX"/>
+                                    <segue destination="NUn-z0-kkv" kind="show" identifier="RestaurantSegue" id="0kc-Q1-AWO"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -95,35 +104,93 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Restaurant Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qc9-cE-Ixk">
-                                <rect key="frame" x="16" y="247" width="138" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QJm-AL-Azt">
+                                <rect key="frame" x="0.0" y="243" width="375" height="60"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Restaurant Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qc9-cE-Ixk">
+                                        <rect key="frame" x="8" y="14" width="128" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="DeR-gc-Qgd"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="16"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yig-xS-Gf8">
+                                        <rect key="frame" x="8" y="33" width="128" height="17"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.20392156862745098" green="0.70196078431372544" blue="0.47450980392156861" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="Yig-xS-Gf8" secondAttribute="bottom" constant="10" id="ThJ-Hf-Laq"/>
+                                    <constraint firstItem="Qc9-cE-Ixk" firstAttribute="leading" secondItem="Yig-xS-Gf8" secondAttribute="leading" id="W8I-ow-LlK"/>
+                                    <constraint firstItem="Qc9-cE-Ixk" firstAttribute="leading" secondItem="QJm-AL-Azt" secondAttribute="leadingMargin" id="dyu-1A-jmr"/>
+                                    <constraint firstItem="Qc9-cE-Ixk" firstAttribute="trailing" secondItem="Yig-xS-Gf8" secondAttribute="trailing" id="hhR-jk-27Q"/>
+                                    <constraint firstItem="Yig-xS-Gf8" firstAttribute="top" secondItem="Qc9-cE-Ixk" secondAttribute="bottom" constant="-2" id="rsx-73-SDP"/>
+                                </constraints>
+                            </view>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="05g-3J-x7Z">
+                                <rect key="frame" x="0.0" y="64" width="375" height="180"/>
+                            </mapView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tUa-56-AfD">
+                                <rect key="frame" x="6" y="320" width="138" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="NKe-M0-TjC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tUa-56-AfD">
-                                <rect key="frame" x="16" y="301" width="138" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="auy-NC-RvN">
+                                <rect key="frame" x="6" y="352" width="138" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="JQr-Os-Oga"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yig-xS-Gf8">
-                                <rect key="frame" x="16" y="272" width="138" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Twitter Handle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XyW-st-M9X">
+                                <rect key="frame" x="6" y="384" width="138" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="dDZ-aY-bhb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="auy-NC-RvN" firstAttribute="trailing" secondItem="XyW-st-M9X" secondAttribute="trailing" id="1Yk-g5-Gjq"/>
+                            <constraint firstItem="tUa-56-AfD" firstAttribute="trailing" secondItem="auy-NC-RvN" secondAttribute="trailing" id="2lw-JV-jqS"/>
+                            <constraint firstItem="05g-3J-x7Z" firstAttribute="leading" secondItem="yL8-Uq-vDK" secondAttribute="leading" id="4Ty-yA-THe"/>
+                            <constraint firstItem="QJm-AL-Azt" firstAttribute="top" secondItem="idx-Ay-dF3" secondAttribute="top" constant="179" id="Dpb-by-ZNH"/>
+                            <constraint firstItem="tUa-56-AfD" firstAttribute="leading" secondItem="auy-NC-RvN" secondAttribute="leading" id="HN5-AT-3mA"/>
+                            <constraint firstItem="auy-NC-RvN" firstAttribute="top" secondItem="tUa-56-AfD" secondAttribute="bottom" constant="8" symbolic="YES" id="Hfx-pd-6rz"/>
+                            <constraint firstItem="tUa-56-AfD" firstAttribute="top" secondItem="05g-3J-x7Z" secondAttribute="bottom" constant="76" id="MIk-Fj-8AG"/>
+                            <constraint firstAttribute="trailing" secondItem="05g-3J-x7Z" secondAttribute="trailing" id="N8M-Dh-aBC"/>
+                            <constraint firstItem="XyW-st-M9X" firstAttribute="top" secondItem="auy-NC-RvN" secondAttribute="bottom" constant="8" symbolic="YES" id="Tds-8i-btq"/>
+                            <constraint firstItem="tUa-56-AfD" firstAttribute="top" secondItem="QJm-AL-Azt" secondAttribute="bottom" constant="17" id="Y6R-et-gbJ"/>
+                            <constraint firstItem="05g-3J-x7Z" firstAttribute="trailing" secondItem="QJm-AL-Azt" secondAttribute="trailing" id="e9b-Oc-yX8"/>
+                            <constraint firstItem="idx-Ay-dF3" firstAttribute="trailing" secondItem="tUa-56-AfD" secondAttribute="trailing" constant="231" id="fwA-B0-v8C"/>
+                            <constraint firstItem="tUa-56-AfD" firstAttribute="leading" secondItem="idx-Ay-dF3" secondAttribute="leading" constant="6" id="j3X-S0-DCG"/>
+                            <constraint firstItem="05g-3J-x7Z" firstAttribute="top" secondItem="idx-Ay-dF3" secondAttribute="top" id="kbt-xZ-gfp"/>
+                            <constraint firstItem="idx-Ay-dF3" firstAttribute="bottom" secondItem="XyW-st-M9X" secondAttribute="bottom" constant="210" id="nTR-KL-XfZ"/>
+                            <constraint firstItem="auy-NC-RvN" firstAttribute="leading" secondItem="XyW-st-M9X" secondAttribute="leading" id="s1M-vv-KUL"/>
+                            <constraint firstItem="05g-3J-x7Z" firstAttribute="leading" secondItem="QJm-AL-Azt" secondAttribute="leading" id="vm6-cL-4rM"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="idx-Ay-dF3"/>
                     </view>
                     <connections>
+                        <outlet property="addressLabel" destination="tUa-56-AfD" id="3Kp-fV-flm"/>
                         <outlet property="categoryNameLabel" destination="Yig-xS-Gf8" id="hYn-y4-eH9"/>
                         <outlet property="phoneNumberLabel" destination="tUa-56-AfD" id="RFj-BE-Vz6"/>
                         <outlet property="restaurantNameLabel" destination="Qc9-cE-Ixk" id="D4g-b8-aNc"/>
+                        <outlet property="twitterLabel" destination="XyW-st-M9X" id="OfM-ND-CN4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nCx-ZZ-yDR" userLabel="First Responder" sceneMemberID="firstResponder"/>
