--- a/Supporting Files/Base.lproj/Main.storyboard
+++ b/Supporting Files/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -97,91 +96,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QJm-AL-Azt">
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QJm-AL-Azt">
                                 <rect key="frame" x="0.0" y="243" width="375" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Restaurant Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qc9-cE-Ixk">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Restaurant Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qc9-cE-Ixk">
                                         <rect key="frame" x="8" y="14" width="128" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="DeR-gc-Qgd"/>
-                                        </constraints>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="16"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yig-xS-Gf8">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yig-xS-Gf8">
                                         <rect key="frame" x="8" y="33" width="128" height="17"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="12"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" red="0.20392156862745098" green="0.70196078431372544" blue="0.47450980392156861" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="Yig-xS-Gf8" secondAttribute="bottom" constant="10" id="ThJ-Hf-Laq"/>
-                                    <constraint firstItem="Qc9-cE-Ixk" firstAttribute="leading" secondItem="Yig-xS-Gf8" secondAttribute="leading" id="W8I-ow-LlK"/>
-                                    <constraint firstItem="Qc9-cE-Ixk" firstAttribute="leading" secondItem="QJm-AL-Azt" secondAttribute="leadingMargin" id="dyu-1A-jmr"/>
-                                    <constraint firstItem="Qc9-cE-Ixk" firstAttribute="trailing" secondItem="Yig-xS-Gf8" secondAttribute="trailing" id="hhR-jk-27Q"/>
-                                    <constraint firstItem="Yig-xS-Gf8" firstAttribute="top" secondItem="Qc9-cE-Ixk" secondAttribute="bottom" constant="-2" id="rsx-73-SDP"/>
-                                </constraints>
                             </view>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="05g-3J-x7Z">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="05g-3J-x7Z">
                                 <rect key="frame" x="0.0" y="64" width="375" height="180"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </mapView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tUa-56-AfD">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tUa-56-AfD">
                                 <rect key="frame" x="6" y="320" width="138" height="24"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="24" id="NKe-M0-TjC"/>
-                                </constraints>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="auy-NC-RvN">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="auy-NC-RvN">
                                 <rect key="frame" x="6" y="352" width="138" height="24"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="24" id="JQr-Os-Oga"/>
-                                </constraints>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Twitter Handle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XyW-st-M9X">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Twitter Handle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XyW-st-M9X">
                                 <rect key="frame" x="6" y="384" width="138" height="24"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="24" id="dDZ-aY-bhb"/>
-                                </constraints>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="auy-NC-RvN" firstAttribute="trailing" secondItem="XyW-st-M9X" secondAttribute="trailing" id="1Yk-g5-Gjq"/>
-                            <constraint firstItem="tUa-56-AfD" firstAttribute="trailing" secondItem="auy-NC-RvN" secondAttribute="trailing" id="2lw-JV-jqS"/>
-                            <constraint firstItem="05g-3J-x7Z" firstAttribute="leading" secondItem="yL8-Uq-vDK" secondAttribute="leading" id="4Ty-yA-THe"/>
-                            <constraint firstItem="QJm-AL-Azt" firstAttribute="top" secondItem="idx-Ay-dF3" secondAttribute="top" constant="179" id="Dpb-by-ZNH"/>
-                            <constraint firstItem="tUa-56-AfD" firstAttribute="leading" secondItem="auy-NC-RvN" secondAttribute="leading" id="HN5-AT-3mA"/>
-                            <constraint firstItem="auy-NC-RvN" firstAttribute="top" secondItem="tUa-56-AfD" secondAttribute="bottom" constant="8" symbolic="YES" id="Hfx-pd-6rz"/>
-                            <constraint firstItem="tUa-56-AfD" firstAttribute="top" secondItem="05g-3J-x7Z" secondAttribute="bottom" constant="76" id="MIk-Fj-8AG"/>
-                            <constraint firstAttribute="trailing" secondItem="05g-3J-x7Z" secondAttribute="trailing" id="N8M-Dh-aBC"/>
-                            <constraint firstItem="XyW-st-M9X" firstAttribute="top" secondItem="auy-NC-RvN" secondAttribute="bottom" constant="8" symbolic="YES" id="Tds-8i-btq"/>
-                            <constraint firstItem="tUa-56-AfD" firstAttribute="top" secondItem="QJm-AL-Azt" secondAttribute="bottom" constant="17" id="Y6R-et-gbJ"/>
-                            <constraint firstItem="05g-3J-x7Z" firstAttribute="trailing" secondItem="QJm-AL-Azt" secondAttribute="trailing" id="e9b-Oc-yX8"/>
-                            <constraint firstItem="idx-Ay-dF3" firstAttribute="trailing" secondItem="tUa-56-AfD" secondAttribute="trailing" constant="231" id="fwA-B0-v8C"/>
-                            <constraint firstItem="tUa-56-AfD" firstAttribute="leading" secondItem="idx-Ay-dF3" secondAttribute="leading" constant="6" id="j3X-S0-DCG"/>
-                            <constraint firstItem="05g-3J-x7Z" firstAttribute="top" secondItem="idx-Ay-dF3" secondAttribute="top" id="kbt-xZ-gfp"/>
-                            <constraint firstItem="idx-Ay-dF3" firstAttribute="bottom" secondItem="XyW-st-M9X" secondAttribute="bottom" constant="210" id="nTR-KL-XfZ"/>
-                            <constraint firstItem="auy-NC-RvN" firstAttribute="leading" secondItem="XyW-st-M9X" secondAttribute="leading" id="s1M-vv-KUL"/>
-                            <constraint firstItem="05g-3J-x7Z" firstAttribute="leading" secondItem="QJm-AL-Azt" secondAttribute="leading" id="vm6-cL-4rM"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="idx-Ay-dF3"/>
                     </view>
                     <connections>
                         <outlet property="addressLabel" destination="tUa-56-AfD" id="3Kp-fV-flm"/>
                         <outlet property="categoryNameLabel" destination="Yig-xS-Gf8" id="hYn-y4-eH9"/>
-                        <outlet property="phoneNumberLabel" destination="tUa-56-AfD" id="RFj-BE-Vz6"/>
+                        <outlet property="phoneNumberLabel" destination="auy-NC-RvN" id="jsH-Ce-bsL"/>
                         <outlet property="restaurantNameLabel" destination="Qc9-cE-Ixk" id="D4g-b8-aNc"/>
                         <outlet property="twitterLabel" destination="XyW-st-M9X" id="OfM-ND-CN4"/>
                     </connections>
